BACKUP-BEFORE-OCT2024/14-Ingress-SSL-with-LetsEncrypt/v1-kube-manifests-old/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: sapp1.awsbestbractices.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-nginx-clusterip-service
          servicePort: 80
  - host: sapp2.awsbestbractices.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app2-nginx-clusterip-service
          servicePort: 80          
  tls:
  - hosts:
    - sapp1.awsbestbractices.com
    secretName: sapp1-kubeoncloud-secret           
  - hosts:
    - sapp2.awsbestbractices.com
    secretName: sapp2-kubeoncloud-secret
